--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset": "2.6.2",
         "kartik-v/yii2-widget-depdrop": "dev-master",
-        "kartik-v/yii2-widget-datepicker": "dev-master"
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "kartik-v/yii2-widget-fileinput": "dev-master",
+        "kartik-v/yii2-builder": "dev-master",
+        "kartik-v/yii2-icons": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
